# vscodespace

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
